<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/name_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/name_hint"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="Name" />

    <TextView
        android:id="@+id/Topping"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/topping"
        android:textColor="@color/purple_500" />

    <CheckBox
        android:id="@+id/Whipped_cream_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/Whipped" />

    <CheckBox
        android:id="@+id/chocolate_check_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/Chocolate" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="QUANTITY"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
         />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

<Button
    android:layout_width="48dp"
    android:layout_height="48dp"
    android:text="+"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="16dp"
    android:onClick="increment"
    />

    <TextView
        android:id="@+id/quantity_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        />

    <Button
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:text="-"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:onClick="decrement"
        />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:onClick="submit0rder"
        android:text="ORDER" />
</LinearLayout>